--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,49 @@
-body{
-    background-color: #1e1c27;
+/* * {border: solid black 1px;}
+ */
+html{
+    font-family: "font\NotoSerifJP-Light.otf";
+    font-size: 10px;
+    scroll-behavior: smooth;
+
 }
-.Nom img{
-    width: 10%; 
-    border-radius: 15%;
+body{
+/*     background-color: #1e1c27; */
+    color: #CCC;
+    overflow-y: hidden;
+    overflow-x: scroll;
+    margin: 0 auto;
 }
 
-.Skills img{
-    width: 50px;
-    height: auto;  
-}
-.machins img{
-    width: 10%;
-}
-.infos img{
-    width: 5%;
-    background-image: url(img\united-kingdom-1.svg);
-}
+.slide {
+    width: 100vw;
+    height: 100vh;
+  }
+  .wrapper {
+    display: flex;
+    flex-direction: row;
+    width: 400vw;
+    transform: rotate(90deg) translateY(-100vh);
+    transform-origin: top left;
+
+  }
+  .un {
+    background: #1e1c27;
+  }
+  .deux {
+    background: #1e1c27;
+  }
+  .trois {
+    background: #1e1c27;
+  }
+  .quatre {
+    background: #1e1c27;
+  }
+  .outer-wrapper{
+    transform: rotate(-90deg) translateX(-100vh);
+    transform-origin: top left;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    position: absolute;
+  }
+
+
