--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html{
 body{
     background-color: #1e1c27;
     color: #CCC;
-    overflow-y: hidden;
+    overflow-y: scroll;
     overflow-x: scroll;
     margin: 0 auto;
     padding: 0 auto;
@@ -49,7 +49,7 @@ body{
   transform: rotate(-90deg) translateX(-100vh);
   transform-origin: top left;
   overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-x: scroll;
   position: absolute;
   scrollbar-width: none;
   -ms-overflow-style: none;
