la navbar fait des siennes

--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,76 @@ html{
     font-family: "font\NotoSerifJP-Light.otf";
     font-size: 10px;
     scroll-behavior: smooth;
-
 }
 body{
-    background-color: #1e1c27;
-    color: #CCC;
-    overflow-y: scroll;
-    overflow-x: scroll;
-    margin: 0 auto;
-    padding: 0 auto;
+  background-color: #1e1c27;
+  color: #CCC;
+  overflow-y: scroll;
+  overflow-x: scroll;
+  margin: 0 auto;
+  padding: 0 auto;
 }
+/* LA BARRE DE NAVARRO */
+nav {
+  text-decoration: none;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+}
+nav img{
+  width: 35px;
+}
+ul{ 
+  list-style-type: none; 
+  margin: 0;
+  padding: 0;
+} 
+li{
+  text-decoration: none;
+}
+
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+  position: sticky;
+  bottom: 0;
+  width: 100%;
+  display: flex;
+  z-index: 10000;
+  flex-direction: row;
+  position: relative;
+
+}
+
+.navbar a {
+  float: left;
+  display: block;
+  color: #ccc;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar a:hover {
+  background: #1e1c27;
+  color: #CCC;
+}
+
+.navbar a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+.navbar img{
+  width: 15px;
+}
+
+.main {
+  padding: 16px;
+  margin-bottom: 30px;
+}
+/* FIN */
+
 /* L'ENFER DU SIDE SCROLLING */
 .slide {
   width: 100vw;
