--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ li{
 }
 
 .navbar a.active {
-  background-color: #04AA6D;
+  background-color: #333;
   color: white;
 }
 .navbar img{
@@ -133,7 +133,7 @@ li{
 }
 
 /* BOUTON */
-@import url('https://fonts.googleapis.com/css?family=Stardos+Stencil');
+/* @import url('https://fonts.googleapis.com/css?family=Stardos+Stencil');
 
 #div  {text-align: center;}
 
@@ -238,5 +238,95 @@ li{
   transition: 1000ms all 1.6s linear;
 }
 
-
+ */
 /* FIN BOUTON */
+
+/* TIMELINE */
+/* Import */
+
+/* Variables */
+/* Base */
+body {
+  background: #252827;
+  font-size: 16px;
+}
+p {
+  font-weight: 300;
+}
+
+h1 {
+  font-family: 'Saira', sans-serif;
+  letter-spacing: 1.5px;
+  color: white;
+  font-weight: 400;
+  font-size: 2.4em;
+}
+#timeline-content {
+  margin-top: 0px;
+  text-align: center;
+}
+/* Timeline */
+.timeline {
+  border-left: 4px solid #004ffc;
+  border-bottom-right-radius: 4px;
+  border-top-right-radius: 4px;
+  background: rgba(255, 255, 255, 0.03);
+  color: rgba(255, 255, 255, 0.8);
+  margin-left: 50%;
+  letter-spacing: 0.5px;
+  position: relative;
+  line-height: 0.85em;
+  font-size: 1em;
+  padding-left: 25px;
+  padding-right: 25px;
+  list-style: none;
+  text-align: left;
+  font-weight: 100;
+  max-width: 30%;
+}
+.timeline h2{
+  letter-spacing: 1.5px;
+  font-weight: 400;
+  font-size: 1em;
+}
+.timeline h3 {
+  letter-spacing: 1.5px;
+  font-weight: 400;
+  font-size: 0.8em;
+}
+
+.timeline .event {
+  border-bottom: 1px dashed rgba(255, 255, 255, 0.1);
+  position: relative;
+}
+.timeline .event:last-of-type {
+  padding-bottom: 0;
+  margin-bottom: 0;
+  border: none;
+}
+.timeline .event:before,
+.timeline .event:after {
+  position: absolute;
+  display: block;
+  top: 0;
+}
+.timeline .event:before {
+  left: -217.5px;
+  color: rgba(255, 255, 255, 0.4);
+  content: attr(data-date);
+  text-align: right;
+  font-weight: 100;
+  font-size: 0.9em;
+  min-width: 120px;
+}
+.timeline .event:after {
+  box-shadow: 0 0 0 4px #004ffc;
+  left: -57.85px;
+  background: #313534;
+  border-radius: 50%;
+  height: 11px;
+  width: 11px;
+  content: "";
+}
+
+/* FIN DE TIMELINE */
