--- a/css/style.css
+++ b/css/style.css
@@ -272,17 +272,17 @@ h1 {
   border-top-right-radius: 4px;
   background: rgba(255, 255, 255, 0.03);
   color: rgba(255, 255, 255, 0.8);
-  margin-left: 50%;
+  margin-left: 20%;
   letter-spacing: 0.5px;
   position: relative;
-  line-height: 0.8em;
+  line-height: 1.5em;
   font-size: 1em;
   padding-left: 25px;
   padding-right: 25px;
   list-style: none;
   text-align: left;
   font-weight: 100;
-  max-width: 30%;
+  max-width: 60%;
 }
 .timeline h2{
   letter-spacing: 1.5px;
@@ -311,17 +311,17 @@ h1 {
   top: 0;
 }
 .timeline .event:before {
-  left: -217.5px;
+  left: -104.5px;
   color: rgba(255, 255, 255, 0.4);
   content: attr(data-date);
-  text-align: right;
+  text-align: center;
   font-weight: 100;
   font-size: 0.9em;
-  min-width: 120px;
+  min-width: 30px;
 }
 .timeline .event:after {
   box-shadow: 0 0 0 4px #004ffc;
-  left: -57.85px;
+  left: -32.85px;
   background: #313534;
   border-radius: 50%;
   height: 11px;
