--- a/css/style.css
+++ b/css/style.css
@@ -311,13 +311,13 @@ h1 {
   top: 0;
 }
 .timeline .event:before {
-  left: -100px;
+  left: -105px;
   color: rgba(255, 255, 255, 0.4);
   content: attr(data-date);
   text-align: center;
   font-weight: 100;
   font-size: 0.9em;
-  min-width: 30px;
+  width: 50px;
 }
 .timeline .event:after {
   box-shadow: 0 0 0 4px #004ffc;
