--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,7 @@ li{
 }
 
 /* BOUTON */
-/* @import url('https://fonts.googleapis.com/css?family=Stardos+Stencil');
+@import url('https://fonts.googleapis.com/css?family=Stardos+Stencil');
 
 #div  {text-align: center;}
 
@@ -238,7 +238,7 @@ li{
   transition: 1000ms all 1.6s linear;
 }
 
- */
+
 /* FIN BOUTON */
 
 /* TIMELINE */
