--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,9 @@
 *{
   scroll-behavior: smooth;
 }
- html{
-    font-family: "font\NotoSerifJP-Light.otf";
+html{
     font-size: 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body{
   background-color: #1e1c27;
@@ -113,8 +113,8 @@ li{
   background: #1e1c27;
   text-decoration: none;
 }
-.one a{
-}
+/* .one a{
+} */
 .two {
   background: #1e1c27;
   text-decoration: none;
@@ -192,8 +192,8 @@ h1, h2{
 }
 
 .machins img{
-  width: 60vh;
-  left: 20px;
+  width: 100%;
+  position: relative;
 }
 .shtml{
   display: flex;
@@ -222,6 +222,17 @@ h1, h2{
 .jack{
   display: flex;
   justify-content: end;
+  align-items: center;
+}
+.git{
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+.canva{
+  display: flex;
+  justify-content: end;
+  align-items: center;
 }
 /* ------------------------------------------------------- */
 /* BOUTON */
@@ -358,7 +369,7 @@ h1 {
 }
 /* Timeline */
 .timeline {
-  border-left: 4px solid #004ffc;
+  border-left: 4px solid #5e8233;
   border-bottom-right-radius: 4px;
   border-top-right-radius: 4px;
   background: rgba(255, 255, 255, 0.03);
@@ -411,7 +422,7 @@ h1 {
   width: 60px;
 }
 .timeline .event:after {
-  box-shadow: 0 0 0 4px #004ffc;
+  box-shadow: 0 0 0 4px #5e8233;
   left: -32.85px;
   background: #313534;
   border-radius: 50%;
