--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,17 @@
 
   #Calque_1{
     position: absolute;
-    z-index: 0;
-    width: 10%;
-    margin-left: 13.6%;
-    top: 30%;
-    display: inline-block;
+    z-index: -1;
+    width: 100vw;
+    /* margin: auto; */
+    /* top: 30%; */
+    top: 50vh;
+    /* display: inline-block; */
     box-sizing: border-box;
+    left: 50vw;
+    transform: translate(-50%, -50%);
+    opacity: 0.3;
+    
   }
   #Calque_1 img{
     width: 50%;
@@ -35,25 +40,47 @@
   }
   #Calque_2{
     position: absolute;
-    z-index: 0;
-    width: 100%;
+    z-index: -1;
+    width: 100vw;
+    /* margin: auto; */
+    /* top: 30%; */
+    top: 50vh;
+    /* display: inline-block; */
+    box-sizing: border-box;
+    left: 150vw;
+    transform: translate(-50%, -50%);
+    opacity: 0.3;
   }
   #Calque_3{
     position: absolute;
-    z-index: 0;
-    width: 100%;
+    z-index: -1;
+    width: 100vw;
+    /* margin: auto; */
+    /* top: 30%; */
+    top: 50vh;
+    /* display: inline-block; */
+    box-sizing: border-box;
+    left: 250vw;
+    transform: translate(-50%, -50%);
+    opacity: 0.3;
   }
   #Calque_4{
     position: absolute;
-    z-index: 0;
-    width: 100%;
+    z-index: -1;
+    width: 100vw;
+    /* margin: auto; */
+    /* top: 30%; */
+    top: 50vh;
+    /* display: inline-block; */
+    box-sizing: border-box;
+    left: 350vw;
+    transform: translate(-50%, -50%);
+    opacity: 0.3;
   }
 
   .one {
     background: #1e1c27;
-    background-image: url("data:image/svg+xml, %3Csvg id='Calque_1' data-name='Calque 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 283.3 274.77' width='283.29998779296875' height='274.7699890136719'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B fill: none; stroke: %23618333; stroke-miterlimit: 10; stroke-width: 3px; %7D %3C/style%3E%3C/defs%3E%3Cline class='cls-1 svg-elem-1' x1='143.65' y1='272.6' x2='68.65' y2='197.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-2' x1='68.65' y1='199.6' x2='143.65' y2='124.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-3' x1='216.65' y1='199.6' x2='141.65' y2='124.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-4' x1='141.65' y1='272.6' x2='216.65' y2='197.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-5' x1='143.65' y1='124.1' x2='68.65' y2='49.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-6' x1='141.65' y1='124.1' x2='216.65' y2='49.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-7' x1='116.38' y1='3.7' x2='69.65' y2='50.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-8' x1='169.2' y1='4.12' x2='215.65' y2='50.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-9' x1='142.54' y1='269.64' x2='142.54' y2='48.47'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-10' x1='142.54' y1='50.6' x2='142.54' y2='39.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-11' x1='136.68' y1='40.26' x2='142.77' y2='50.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-12' x1='148.52' y1='40.26' x2='142.43' y2='50.6'%3E%3C/line%3E%3Cellipse class='cls-1 svg-elem-13' cx='141.65' cy='137.39' rx='140.15' ry='135.89'%3E%3C/ellipse%3E%3C/svg%3E");  
-    background-repeat: no-repeat;
-    background-position: center;
+    z-index: 0;
   }
   .one a{
     text-decoration: none;
@@ -62,23 +89,17 @@
   }
   .two {
     background: #1e1c27;
-    background-image: url("data:image/svg+xml, %3Csvg id='Calque_1' data-name='Calque 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 283.3 274.77' width='283.29998779296875' height='274.7699890136719'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B fill: none; stroke: %23618333; stroke-miterlimit: 10; stroke-width: 3px; %7D %3C/style%3E%3C/defs%3E%3Cline class='cls-1 svg-elem-1' x1='143.65' y1='272.6' x2='68.65' y2='197.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-2' x1='68.65' y1='199.6' x2='143.65' y2='124.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-3' x1='216.65' y1='199.6' x2='141.65' y2='124.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-4' x1='141.65' y1='272.6' x2='216.65' y2='197.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-5' x1='143.65' y1='124.1' x2='68.65' y2='49.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-6' x1='141.65' y1='124.1' x2='216.65' y2='49.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-7' x1='116.38' y1='3.7' x2='69.65' y2='50.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-8' x1='169.2' y1='4.12' x2='215.65' y2='50.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-9' x1='142.54' y1='269.64' x2='142.54' y2='48.47'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-10' x1='142.54' y1='50.6' x2='142.54' y2='39.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-11' x1='136.68' y1='40.26' x2='142.77' y2='50.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-12' x1='148.52' y1='40.26' x2='142.43' y2='50.6'%3E%3C/line%3E%3Cellipse class='cls-1 svg-elem-13' cx='141.65' cy='137.39' rx='140.15' ry='135.89'%3E%3C/ellipse%3E%3C/svg%3E");  
-    background-repeat: no-repeat;
-    background-position: center;
     text-decoration: none;
     padding: 4px;
+    z-index: -5;
   }
   .three {
     background: #1e1c27;
-    background-image: url("data:image/svg+xml, %3Csvg id='Calque_1' data-name='Calque 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 283.3 274.77' width='283.29998779296875' height='274.7699890136719'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B fill: none; stroke: %23618333; stroke-miterlimit: 10; stroke-width: 3px; %7D %3C/style%3E%3C/defs%3E%3Cline class='cls-1 svg-elem-1' x1='143.65' y1='272.6' x2='68.65' y2='197.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-2' x1='68.65' y1='199.6' x2='143.65' y2='124.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-3' x1='216.65' y1='199.6' x2='141.65' y2='124.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-4' x1='141.65' y1='272.6' x2='216.65' y2='197.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-5' x1='143.65' y1='124.1' x2='68.65' y2='49.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-6' x1='141.65' y1='124.1' x2='216.65' y2='49.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-7' x1='116.38' y1='3.7' x2='69.65' y2='50.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-8' x1='169.2' y1='4.12' x2='215.65' y2='50.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-9' x1='142.54' y1='269.64' x2='142.54' y2='48.47'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-10' x1='142.54' y1='50.6' x2='142.54' y2='39.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-11' x1='136.68' y1='40.26' x2='142.77' y2='50.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-12' x1='148.52' y1='40.26' x2='142.43' y2='50.6'%3E%3C/line%3E%3Cellipse class='cls-1 svg-elem-13' cx='141.65' cy='137.39' rx='140.15' ry='135.89'%3E%3C/ellipse%3E%3C/svg%3E");  
-    background-repeat: no-repeat;
-    background-position: center;
+    z-index: -5;
   }
   .four {
     background: #1e1c27;
-    background-image: url("data:image/svg+xml, %3Csvg id='Calque_1' data-name='Calque 1' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 283.3 274.77' width='283.29998779296875' height='274.7699890136719'%3E%3Cdefs%3E%3Cstyle%3E .cls-1 %7B fill: none; stroke: %23618333; stroke-miterlimit: 10; stroke-width: 3px; %7D %3C/style%3E%3C/defs%3E%3Cline class='cls-1 svg-elem-1' x1='143.65' y1='272.6' x2='68.65' y2='197.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-2' x1='68.65' y1='199.6' x2='143.65' y2='124.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-3' x1='216.65' y1='199.6' x2='141.65' y2='124.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-4' x1='141.65' y1='272.6' x2='216.65' y2='197.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-5' x1='143.65' y1='124.1' x2='68.65' y2='49.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-6' x1='141.65' y1='124.1' x2='216.65' y2='49.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-7' x1='116.38' y1='3.7' x2='69.65' y2='50.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-8' x1='169.2' y1='4.12' x2='215.65' y2='50.1'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-9' x1='142.54' y1='269.64' x2='142.54' y2='48.47'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-10' x1='142.54' y1='50.6' x2='142.54' y2='39.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-11' x1='136.68' y1='40.26' x2='142.77' y2='50.6'%3E%3C/line%3E%3Cline class='cls-1 svg-elem-12' x1='148.52' y1='40.26' x2='142.43' y2='50.6'%3E%3C/line%3E%3Cellipse class='cls-1 svg-elem-13' cx='141.65' cy='137.39' rx='140.15' ry='135.89'%3E%3C/ellipse%3E%3C/svg%3E");  
-    background-repeat: no-repeat;
-    background-position: center;
+    z-index: -5;
   }
   .Expériences, .Formations{
     display: inline-flex;
@@ -611,6 +632,7 @@
                        animate-svg-fill-1 0.7s cubic-bezier(0.47, 0, 0.745, 0.715) 0.8s both;
           animation: animate-svg-stroke-1 1s cubic-bezier(0.47, 0, 0.745, 0.715) 0s both,
                animate-svg-fill-1 0.7s cubic-bezier(0.47, 0, 0.745, 0.715) 0.8s both;
+           animation: animate1 5s infinite linear;
 }
 
 @-webkit-keyframes animate-svg-stroke-2 {
