--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,10 @@
     color: #CCC;
     font-size: 1.5rem;
   }
+  .one p{
+    padding: 0%;
+    margin: 0%;
+  }
   .two {
     background: #1e1c27;
     text-decoration: none;
@@ -135,18 +139,26 @@
   h1, h2{
     text-align: center;
   }
+
+  .presentation{
+    display: flex;
+    align-items: flex-end;
+    flex-direction: column-reverse;
+  }
+
 /*   .phone{
     display: flex;
     justify-content: start;
     align-items: center;
     z-index: 1000;
+    
   }
   .mail{
     display: flex;
     justify-content: end;
     align-items: center;
     z-index: 1000;
-  
+    bottom: 0%;
   }
   .website{
     display: flex;
@@ -170,10 +182,7 @@
   
   } */
   
-  .machins img{
-    width: 100%;
-    position: relative;
-  }
+
 
   
   /* ------------------------------------------------------- */
@@ -319,7 +328,7 @@
     border-top-right-radius: 4px;
     background: rgba(255, 255, 255, 0.03);
     color: rgba(255, 255, 255, 0.8);
-    margin-left: 20%;
+    margin-left: 25%;
     letter-spacing: 0.5px;
     position: relative;
     line-height: 1.5em;
@@ -358,7 +367,7 @@
     top: 0;
   }
   .timeline .event:before {
-    left: -50%;
+    left: -47%;
     color: rgba(255, 255, 255, 0.4);
     content: attr(data-date);
     text-align: center;
@@ -440,6 +449,7 @@
     margin-bottom: 30px;
   }
   /* FIN */
+
   
   /* L'ENFER DU SIDE SCROLLING */
   .slide {
@@ -516,7 +526,7 @@
   }
   
   .flip-card-back {
-    background-color: #D9FFD4;
+    background-color: #FFC528;
     color: white;
     transform: rotateY(180deg);
     width: 100%;
@@ -572,6 +582,13 @@
     transform: rotateY(180deg);
     width: 100%;
     height: 100%;
+  }
+  .flip-card-back2 li{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-top: 4%;
+    text-align: center;
   }
   
   /* ----------------------------------------------------------- */
