--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@
     margin-top: 0%;
   }
   #presentation{
-    padding-top: 50%;
+    padding-top: 25vh;
   }
   .two {
     background: #1e1c27;
