--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
-  *{
+  * {
     scroll-behavior: smooth;
   }
-  html{
-      font-size: 10px;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  
+
+  html {
+    font-size: 10px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
   }
-  body{
+
+  body {
     color: #CCC;
     overflow-y: scroll;
     overflow-x: scroll;
@@ -14,19 +16,20 @@
     padding: 0 auto;
     z-index: -2;
   }
+
   /* ------------------------------------------------------- */
-  #langage_switch img{
+  #langage_switch img {
     position: fixed;
     top: 0%;
     right: 80%;
-    
+
   }
-  
+
   /* ------------------------------------------------------- */
 
- /* CHAQUE PAGE  */
+  /* CHAQUE PAGE  */
 
-  #Calque_1{
+  #Calque_1 {
     position: absolute;
     z-index: -1;
     width: 98vw;
@@ -38,15 +41,18 @@
     left: 50vw;
     transform: translate(-50%, -50%);
     opacity: 0.3;
-    
+
   }
-  #Calque_1 img{
+
+  #Calque_1 img {
     width: 50%;
   }
-  #cls-1{
+
+  #cls-1 {
     width: 200%;
   }
-  #Calque_2{
+
+  #Calque_2 {
     position: absolute;
     z-index: -1;
     width: 98vw;
@@ -59,7 +65,8 @@
     transform: translate(-50%, -50%);
     opacity: 0.3;
   }
-  #Calque_3{
+
+  #Calque_3 {
     position: absolute;
     z-index: -1;
     width: 98vw;
@@ -72,7 +79,8 @@
     transform: translate(-50%, -50%);
     opacity: 0.3;
   }
-  #Calque_4{
+
+  #Calque_4 {
     position: absolute;
     z-index: -1;
     width: 98vw;
@@ -90,7 +98,8 @@
     background: #1e1c27;
     z-index: 0;
   }
-  .one a{
+
+  .one a {
     text-decoration: none;
     color: #CCC;
     font-size: 1.5rem;
@@ -98,14 +107,17 @@
     border-radius: 50px;
     box-shadow: white;
   }
-  .one p{
+
+  .one p {
     padding-top: 0%;
     margin-top: 0%;
   }
-  #presentation{
+
+  #presentation {
     padding-top: 20vh;
     text-align: center;
   }
+
   .two {
     background: #1e1c27;
     text-decoration: none;
@@ -113,58 +125,67 @@
     z-index: -5;
     width: 100vw;
   }
+
   .three {
     background: #1e1c27;
     z-index: -5;
     width: 100vw;
-    
+
   }
+
   .four {
     background: #1e1c27;
     z-index: -5;
   }
-  .Expériences, .Formations{
+
+  .Expériences,
+  .Formations {
     display: inline-flex;
     flex-direction: row;
   }
-  .one img{
+
+  .one img {
     width: 40px;
   }
-  
-  .two img{
+
+  .two img {
     width: 50px;
   }
-  
-  .Skills img{
+
+  .Skills img {
     width: 50px;
     display: flex;
     flex-direction: column;
-    justify-content: center; 
+    justify-content: center;
   }
-  .Skills{
+
+  .Skills {
     box-sizing: border-box;
     padding: 10px;
   }
-  
-  .two a{
+
+  .two a {
     text-decoration: none;
     color: #CCC;
     font-size: 1.5rem;
   }
-  .two a:visited{
+
+  .two a:visited {
     color: #5e8233;
   }
-  h1, h2{
+
+  h1,
+  h2 {
     text-align: center;
   }
 
-  .presentation{
+  .presentation {
     display: flex;
     align-items: flex-end;
     flex-direction: column-reverse;
   }
 
-/*   .phone{
+  /*   .phone{
     display: flex;
     justify-content: start;
     align-items: center;
@@ -199,136 +220,165 @@
     z-index: 1000;
   
   } */
-  
 
 
-  
+
+
   /* ------------------------------------------------------- */
   /* BOUTON */
-  #div  {text-align: center;}
+  #div {
+    text-align: center;
+  }
 
 
-  
-  .hide {opacity: 0;}
+
+  .hide {
+    opacity: 0;
+  }
+
   #template {
     display: inline-block;
     fill: none;
     stroke: #727272;
     stroke-width: 10px;
   }
+
   #list {
     fill: none;
     stroke: #727272;
     stroke-width: 10px;
   }
+
   .list {
     animation: list 1ms 0s ease 1 forwards;
   }
+
   @keyframes list {
     0% {
       opacity: 1;
     }
+
     100% {
       opacity: 0;
     }
   }
-  
+
   #downloadarrow {
     fill: none;
     stroke: #595959;
     stroke-width: 10px;
     opacity: 0;
   }
+
   .downloadarrow {
     animation: downloadarrow 1s 0s infinite linear;
   }
+
   @keyframes downloadarrow {
     0% {
       opacity: 1;
       transform: translateY(-60px);
     }
+
     100% {
       opacity: 0.6;
       transform: translateY(-20px);
     }
   }
+
   #downloadtray {
     fill: none;
     stroke: #595959;
     stroke-width: 10px;
     opacity: 0;
   }
+
   .downloadtray {
     animation: downloadtray 0.5s 0s ease 1 forwards;
   }
+
   @keyframes downloadtray {
     0% {
       opacity: 0;
     }
+
     100% {
       opacity: 1.0;
     }
   }
+
   #tick {
     fill: none;
     stroke-width: 50px;
     opacity: 0;
   }
+
   .tick {
     animation: tick 1ms 0s ease 1 forwards;
   }
+
   @keyframes tick {
     0% {
       opacity: 0;
     }
+
     100% {
       opacity: 1.0;
     }
   }
+
   #tickround {
     stroke: lime;
     stroke-dasharray: 4000;
     stroke-linecap: round;
   }
+
   .tickdraw {
     animation: tickdraw 2s 0s linear;
   }
+
   @keyframes tickdraw {
     0% {
       stroke-dashoffset: 4000;
     }
+
     100% {
       stroke-dashoffset: 8000;
     }
   }
+
   .text {
-    font-size: calc(100% + 20px); font-family: 'Stardos Stencil';
+    font-size: calc(100% + 20px);
+    font-family: 'Stardos Stencil';
     margin: 50px 0px 0px 0px;
     font-size: x-large;
   }
+
   .Color {
     color: lime;
     transition: 1000ms all 1.6s linear;
   }
-.div{
-  z-index: 500000;
-}
-  
-  
+
+  .div {
+    z-index: 500000;
+  }
+
+
   /* FIN BOUTON */
- /* ------------------------------- */
+  /* ------------------------------- */
 
   /* TIMELINE */
-  
+
   /* Base */
   body {
     background: #252827;
     font-size: 16px;
   }
+
   p {
     font-weight: 300;
   }
-  
+
   h1 {
     font-family: 'Saira', sans-serif;
     letter-spacing: 1.5px;
@@ -336,11 +386,13 @@
     font-weight: 400;
     font-size: 2.4em;
   }
+
   #timeline-content {
     margin-top: 0px;
     text-align: left;
   }
- /* ------------------------------------------- */
+
+  /* ------------------------------------------- */
 
   /* Timeline */
   .timeline {
@@ -352,7 +404,7 @@
     margin-left: 25%;
     letter-spacing: 0.5px;
     position: relative;
-    line-height: 1.501em;
+    line-height: 1.5em;
     font-size: 0.85em;
     padding-left: 25px;
     padding-right: 25px;
@@ -361,32 +413,37 @@
     font-weight: 100;
     max-width: 60%;
   }
-  .timeline h2{
+
+  .timeline h2 {
     letter-spacing: 1.5px;
     font-weight: 400;
     font-size: 1em;
   }
+
   .timeline h3 {
     letter-spacing: 1.5px;
     font-weight: 400;
     font-size: 1em;
   }
-  
+
   .timeline .event {
     border-bottom: 1px dashed rgba(255, 255, 255, 0.1);
     position: relative;
   }
+
   .timeline .event:last-of-type {
     padding-bottom: 0;
     margin-bottom: 0;
     border: none;
   }
+
   .timeline .event:before,
   .timeline .event:after {
     position: absolute;
     display: block;
     top: 0;
   }
+
   .timeline .event:before {
     left: -47%;
     color: rgba(255, 255, 255, 0.4);
@@ -397,6 +454,7 @@
     width: 60px;
     padding: 10px;
   }
+
   .timeline .event:after {
     box-shadow: 0 0 0 4px #5e8233;
     left: -32.85px;
@@ -406,9 +464,9 @@
     width: 11px;
     content: "";
   }
-  
+
   /* FIN DE TIMELINE */
-  
+
   /* BARRE NAVIGUATION */
   nav {
     text-decoration: none;
@@ -417,15 +475,16 @@
     justify-content: flex-end;
   }
 
-  ul{ 
-    list-style-type: none; 
+  ul {
+    list-style-type: none;
     margin: 0;
     padding: 0;
-  } 
-  li{
+  }
+
+  li {
     text-decoration: none;
   }
-  
+
   .navbar {
     overflow: hidden;
     background-color: #333;
@@ -436,9 +495,9 @@
     z-index: 10000;
     flex-direction: row;
     justify-content: space-evenly;
-  
+
   }
-  
+
   .navbar a {
     float: left;
     display: block;
@@ -449,35 +508,39 @@
     font-size: 17px;
     width: calc(100%/4);
   }
-  
+
   .navbar a:hover {
     background: #1e1c27;
     color: #CCC;
   }
-  
+
   .navbar a.active {
     background-color: #333;
     color: white;
   }
-  .navbar img{
+
+  .navbar img {
     width: 25px;
   }
-  
+
   .main {
     padding: 16px;
     margin-bottom: 30px;
   }
-  #skills{
+
+  #skills {
     width: 27px;
   }
+
   /* FIN */
 
-  
+
   /*SIDE SCROLLING */
   .slide {
     width: 100vw;
     height: 100vh;
   }
+
   .wrapper {
     display: flex;
     flex-direction: row;
@@ -485,25 +548,26 @@
     transform: rotate(90deg) translateY(-100vh);
     transform-origin: top left;
   }
-  
-  
+
+
   .outer-wrapper {
     width: -50vh;
     height: 100vw;
     transform: rotate(-90deg) translateX(-100vh);
     transform-origin: top left;
-    overflow-y:auto;
+    overflow-y: auto;
     overflow-x: scroll;
     position: absolute;
     scrollbar-width: none;
     -ms-overflow-style: none;
   }
+
   ::-webkit-scrollbar {
-    display:none;
+    display: none;
   }
-  
+
   /* ------------------------------------------------------ */
-  
+
   /* CARTE 1 */
   .flip-card {
     background-color: transparent;
@@ -511,10 +575,10 @@
     height: 300px;
     perspective: 1000px;
     z-index: 10000;
-    margin: auto;    
+    margin: auto;
     padding-top: 10%;
   }
-  
+
   .flip-card-inner {
     position: relative;
     width: 100%;
@@ -522,17 +586,18 @@
     text-align: center;
     transition: transform 0.6s;
     transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding-left: auto;
     padding-right: auto;
   }
-  
+
   .flip-card:hover .flip-card-inner {
     transform: rotateY(180deg);
     z-index: 10000;
   }
-  
-  .flip-card-front, .flip-card-back {
+
+  .flip-card-front,
+  .flip-card-back {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -540,13 +605,13 @@
     backface-visibility: hidden;
     z-index: 10000;
   }
-  
+
   .flip-card-front {
     background-color: #bbb;
     color: black;
     z-index: 10000;
   }
-  
+
   .flip-card-back {
     background-color: #FFC528;
     color: white;
@@ -560,7 +625,7 @@
     align-items: center;
 
   }
-  
+
   /* Carte 2 */
   .flip-card2 {
     background-color: transparent;
@@ -570,7 +635,7 @@
     margin: auto;
     padding-top: 10%;
   }
-  
+
   .flip-card-inner2 {
     position: relative;
     width: 100%;
@@ -578,180 +643,182 @@
     text-align: center;
     transition: transform 0.6s;
     transform-style: preserve-3d;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   }
-  
+
   .flip-card2:hover .flip-card-inner2 {
     transform: rotateY(180deg);
   }
-  
-  .flip-card-front2, .flip-card-back2 {
+
+  .flip-card-front2,
+  .flip-card-back2 {
     position: absolute;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
   }
-  
+
   .flip-card-front2 {
     background-color: #bbb;
     color: black;
   }
-  
+
   .flip-card-back2 {
-    background-color: #FFC528 ;
+    background-color: #FFC528;
     color: white;
     transform: rotateY(180deg);
     width: 100%;
     height: 100%;
   }
-  .flip-card-back2 li{
+
+  .flip-card-back2 li {
     display: flex;
     flex-direction: column;
     margin: auto;
     margin-top: 4%;
     text-align: center;
   }
-  
+
   /* ----------------------------------------------------------- */
   /* Carousel de mort*/
   /* ------------------------------------------------------------ */
-/***************************************************
+  /***************************************************
  /***************************************************
  * Generated by SVG Artista on 9/20/2023, 4:05:46 PM
  * MIT license (https://opensource.org/licenses/MIT)
  * W. https://svgartista.net
  **************************************************/
 
-@-webkit-keyframes animate-svg-stroke-1 {
-  0% {
-    stroke-dashoffset: 1221.6983642578125px;
-    stroke-dasharray: 1221.6983642578125px;
+  @-webkit-keyframes animate-svg-stroke-1 {
+    0% {
+      stroke-dashoffset: 1221.6983642578125px;
+      stroke-dasharray: 1221.6983642578125px;
+    }
+
+    100% {
+      stroke-dashoffset: 0;
+      stroke-dasharray: 1221.6983642578125px;
+    }
   }
 
-  100% {
-    stroke-dashoffset: 0;
-    stroke-dasharray: 1221.6983642578125px;
-  }
-}
+  @keyframes animate-svg-stroke-1 {
+    0% {
+      stroke-dashoffset: 1221.6983642578125px;
+      stroke-dasharray: 1221.6983642578125px;
+    }
 
-@keyframes animate-svg-stroke-1 {
-  0% {
-    stroke-dashoffset: 1221.6983642578125px;
-    stroke-dasharray: 1221.6983642578125px;
-  }
-
-  100% {
-    stroke-dashoffset: 0;
-    stroke-dasharray: 1221.6983642578125px;
-  }
-}
-
-@-webkit-keyframes animate-svg-fill-1 {
-  0% {
-    fill: transparent;
+    100% {
+      stroke-dashoffset: 0;
+      stroke-dasharray: 1221.6983642578125px;
+    }
   }
 
-  100% {
-    fill: rgb(94, 130, 51);
-  }
-}
+  @-webkit-keyframes animate-svg-fill-1 {
+    0% {
+      fill: transparent;
+    }
 
-@keyframes animate-svg-fill-1 {
-  0% {
-    fill: transparent;
-  }
-
-  100% {
-    fill: rgb(94, 130, 51);
-  }
-}
-
-.svg-elem-1 {
-  -webkit-animation: animate-svg-stroke-1 5s cubic-bezier(0.19, 1, 0.22, 1) 0s both,
-                       animate-svg-fill-1 5s cubic-bezier(0.215, 0.61, 0.355, 1) 0s both;
-          animation: animate-svg-stroke-1 5s cubic-bezier(0.19, 1, 0.22, 1) 0s both,
-               animate-svg-fill-1 5s cubic-bezier(0.215, 0.61, 0.355, 1) 0s both;
-}
-
-@-webkit-keyframes animate-svg-stroke-2 {
-  0% {
-    stroke-dashoffset: 953.4159545898438px;
-    stroke-dasharray: 953.4159545898438px;
+    100% {
+      fill: rgb(94, 130, 51);
+    }
   }
 
-  100% {
-    stroke-dashoffset: 0;
-    stroke-dasharray: 953.4159545898438px;
-  }
-}
+  @keyframes animate-svg-fill-1 {
+    0% {
+      fill: transparent;
+    }
 
-@keyframes animate-svg-stroke-2 {
-  0% {
-    stroke-dashoffset: 953.4159545898438px;
-    stroke-dasharray: 953.4159545898438px;
+    100% {
+      fill: rgb(94, 130, 51);
+    }
   }
 
-  100% {
-    stroke-dashoffset: 0;
-    stroke-dasharray: 953.4159545898438px;
-  }
-}
-
-@-webkit-keyframes animate-svg-fill-2 {
-  0% {
-    fill: transparent;
+  .svg-elem-1 {
+    -webkit-animation: animate-svg-stroke-1 5s cubic-bezier(0.19, 1, 0.22, 1) 0s both,
+      animate-svg-fill-1 5s cubic-bezier(0.215, 0.61, 0.355, 1) 0s both;
+    animation: animate-svg-stroke-1 5s cubic-bezier(0.19, 1, 0.22, 1) 0s both,
+      animate-svg-fill-1 5s cubic-bezier(0.215, 0.61, 0.355, 1) 0s both;
   }
 
-  100% {
-    fill: rgb(94, 130, 51);
-  }
-}
+  @-webkit-keyframes animate-svg-stroke-2 {
+    0% {
+      stroke-dashoffset: 953.4159545898438px;
+      stroke-dasharray: 953.4159545898438px;
+    }
 
-@keyframes animate-svg-fill-2 {
-  0% {
-    fill: transparent;
-  }
-
-  100% {
-    fill: rgb(94, 130, 51);
-  }
-}
-
-.svg-elem-2 {
-  -webkit-animation: animate-svg-stroke-2 5s cubic-bezier(0.19, 1, 0.22, 1) 0.12s both,
-                       animate-svg-fill-2 5s cubic-bezier(0.215, 0.61, 0.355, 1) 0.5s both;
-          animation: animate-svg-stroke-2 5s cubic-bezier(0.19, 1, 0.22, 1) 0.12s both,
-               animate-svg-fill-2 5s cubic-bezier(0.215, 0.61, 0.355, 1) 0.5s both;
-}
-
-@-webkit-keyframes animate-svg-stroke-3 {
-  0% {
-    stroke-dashoffset: 1205.1229248046875px;
-    stroke-dasharray: 1205.1229248046875px;
+    100% {
+      stroke-dashoffset: 0;
+      stroke-dasharray: 953.4159545898438px;
+    }
   }
 
-  100% {
-    stroke-dashoffset: 0;
-    stroke-dasharray: 1205.1229248046875px;
-  }
-}
+  @keyframes animate-svg-stroke-2 {
+    0% {
+      stroke-dashoffset: 953.4159545898438px;
+      stroke-dasharray: 953.4159545898438px;
+    }
 
-@keyframes animate-svg-stroke-3 {
-  0% {
-    stroke-dashoffset: 1205.1229248046875px;
-    stroke-dasharray: 1205.1229248046875px;
+    100% {
+      stroke-dashoffset: 0;
+      stroke-dasharray: 953.4159545898438px;
+    }
   }
 
-  100% {
-    stroke-dashoffset: 0;
-    stroke-dasharray: 1205.1229248046875px;
-  }
-}
+  @-webkit-keyframes animate-svg-fill-2 {
+    0% {
+      fill: transparent;
+    }
 
-.svg-elem-3 {
-  -webkit-animation: animate-svg-stroke-3 5s cubic-bezier(0.19, 1, 0.22, 1) 0.24s both,
-                       animate-svg-fill-3 5s cubic-bezier(0.215, 0.61, 0.355, 1) 1s both;
-          animation: animate-svg-stroke-3 5s cubic-bezier(0.19, 1, 0.22, 1) 0.24s both,
-               animate-svg-fill-3 5s cubic-bezier(0.215, 0.61, 0.355, 1) 1s both;
-}
+    100% {
+      fill: rgb(94, 130, 51);
+    }
+  }
+
+  @keyframes animate-svg-fill-2 {
+    0% {
+      fill: transparent;
+    }
+
+    100% {
+      fill: rgb(94, 130, 51);
+    }
+  }
+
+  .svg-elem-2 {
+    -webkit-animation: animate-svg-stroke-2 5s cubic-bezier(0.19, 1, 0.22, 1) 0.12s both,
+      animate-svg-fill-2 5s cubic-bezier(0.215, 0.61, 0.355, 1) 0.5s both;
+    animation: animate-svg-stroke-2 5s cubic-bezier(0.19, 1, 0.22, 1) 0.12s both,
+      animate-svg-fill-2 5s cubic-bezier(0.215, 0.61, 0.355, 1) 0.5s both;
+  }
+
+  @-webkit-keyframes animate-svg-stroke-3 {
+    0% {
+      stroke-dashoffset: 1205.1229248046875px;
+      stroke-dasharray: 1205.1229248046875px;
+    }
+
+    100% {
+      stroke-dashoffset: 0;
+      stroke-dasharray: 1205.1229248046875px;
+    }
+  }
+
+  @keyframes animate-svg-stroke-3 {
+    0% {
+      stroke-dashoffset: 1205.1229248046875px;
+      stroke-dasharray: 1205.1229248046875px;
+    }
+
+    100% {
+      stroke-dashoffset: 0;
+      stroke-dasharray: 1205.1229248046875px;
+    }
+  }
+
+  .svg-elem-3 {
+    -webkit-animation: animate-svg-stroke-3 5s cubic-bezier(0.19, 1, 0.22, 1) 0.24s both,
+      animate-svg-fill-3 5s cubic-bezier(0.215, 0.61, 0.355, 1) 1s both;
+    animation: animate-svg-stroke-3 5s cubic-bezier(0.19, 1, 0.22, 1) 0.24s both,
+      animate-svg-fill-3 5s cubic-bezier(0.215, 0.61, 0.355, 1) 1s both;
+  }
