--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@
   /* CHAQUE PAGE  */
 
   #Calque_1 {
+    height: 100vh;
     position: absolute;
     z-index: -1;
     width: 98vw;
@@ -53,6 +54,7 @@
   }
 
   #Calque_2 {
+    height: 100vh;
     position: absolute;
     z-index: -1;
     width: 98vw;
@@ -67,6 +69,7 @@
   }
 
   #Calque_3 {
+    height: 100vh;
     position: absolute;
     z-index: -1;
     width: 98vw;
@@ -81,6 +84,7 @@
   }
 
   #Calque_4 {
+    height: 100vh;
     position: absolute;
     z-index: -1;
     width: 98vw;
