--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,6 @@
   /* CHAQUE PAGE  */
 
   #Calque_1 {
-    height: 100vh;
     position: absolute;
     z-index: -1;
     width: 98vw;
@@ -577,7 +576,7 @@
     perspective: 1000px;
     z-index: 10000;
     margin: auto;
-    padding-top: 10%;
+    padding-top: 10vh;
   }
 
   .flip-card-inner {
@@ -634,6 +633,45 @@
 
   }
 
+
+  .container {  display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 10px 10px;
+    grid-auto-flow: row;
+    grid-template-areas:
+      ". . . . ."
+      ". HTML CSS JS ."
+      ". Wordpress Pack-Office Visual-Code ."
+      ". Photoshop Canva Figma ."
+      ". Git English . ."
+      ". . . . .";
+  }
+  
+  .HTML { grid-area: HTML; }
+  
+  .CSS { grid-area: CSS; }
+  
+  .JS { grid-area: JS; }
+  
+  .Wordpress { grid-area: Wordpress; }
+  
+  .Pack-Office { grid-area: Pack-Office; }
+  
+  .Visual-Code { grid-area: Visual-Code; }
+  
+  .Photoshop { grid-area: Photoshop; }
+  
+  .Canva { grid-area: Canva; }
+  
+  .Figma { grid-area: Figma; }
+  
+  .Git { grid-area: Git; }
+  
+  .English { grid-area: English; }
+  
+  
+
   /* Carte 2 */
   .flip-card2 {
     background-color: transparent;
@@ -641,7 +679,7 @@
     height: 300px;
     perspective: 1000px;
     margin: auto;
-    padding-top: 10%;
+    padding-top: 10vh;
   }
 
   .flip-card-inner2 {
