--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    line-height: 24pt;
 }
 
   .two a {
@@ -572,7 +573,7 @@
   #flip-card-btn-turn-to-back, #flip-card-btn-turn-to-front {
     position: absolute;
     top: 40px;
-    right: 40vw;
+    right: 35vw;
     width: 100px;
     height: 40px;
     background: green;
