--- a/css/style.css
+++ b/css/style.css
@@ -582,7 +582,7 @@
     font-weight: 600;
     font-size: .7em;
     padding: 0;
-    border: 1px solid green;
+    border: 1px solid #5e8233;
     border-radius: 50px;
   }
 
