--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@
     font-size: 1.5rem;
     border-left: white 1px;
     border-radius: 50px;
-    box-shadow: rgb(247, 245, 245);
+    /* box-shadow: rgb(247, 245, 245); */
   }
 
   .one p {
@@ -539,7 +539,7 @@
 
 
   .outer-wrapper {
-    width: -50vh;
+    /* width: -50vh; */
     height: 100vw;
     transform: rotate(-90deg) translateX(-100vh);
     transform-origin: top left;
@@ -909,4 +909,5 @@ h3{
 
 .text-logo{
   visibility: visible;
+}
 }
