--- a/css/lightgallery.css
+++ b/css/lightgallery.css
@@ -198,7 +198,7 @@
 .lg-toolbar .lg-icon {
   color: #999;
   cursor: pointer;
-  /* float: right; */
+  float: right;
   font-size: 24px;
   height: 47px;
   line-height: 27px;
